Ensure clean disply of blurb on homepage. Monthly pick admin form limits blurb to 200 chars. Blurb gets vertically truncated when more than 4 lines. (bug 715577)

--- a/media/css/impala/promos.less
+++ b/media/css/impala/promos.less
@@ -178,6 +178,9 @@
             max-height: 120px;
         }
     }
+    .blurb > p {
+        height: 68px;
+    }
 }
 
 .html-rtl #monthly .thumb {
